# env

./: .gitignore  CALLBACK_EXAMPLE.md  CALLBACK_FLOW_DIAGRAM.md  CALLBACK_TUTORIAL.md  IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.MD  README.md  REWARD_TRACKING_FIXES.md  TESTING_FEATURES.md  pyproject.toml  requirements.txt  setup.cfg  test.py
doc/: GuestEnv_Documentation.docx  README.md  rl_env_flow_fixed.drawio  rl_env_reset_step_fixed.drawio  rl_env_step_detail.drawio  test.md  thesis
env/: env_gym.py
examples/: compare_env.py  config_tests.ipynb  dry_run_guestrl.py  dry_run_guestrl_2.py  extreme_config_tests.ipynb  plot_phonemes.py  solve.py  solve_env.py  solve_the_env.py
guest_env/: __init__.py
learn/: train.py  train_ppo_inequality.py
learn/new_train/: train.py
notebook/: 1.2_scenario_tests.ipynb  1_scenario_tests.ipynb  2_config_tests.ipynb  3_extreme_config_tests.ipynb  4_env_test.ipynb  5_graphs.ipynb
old_train/: ppo_train.py
ppo_results/detailed_logs/: events.out.tfevents.1750884775.Ofirs-MBP.lan.33809.1
scripts/: train.py
src/callback/: guest_callback.py  guest_callback_lightweight.py  guest_callback_per_episode.py  guest_callback_per_episode_multi_env.py
src/env/: .gitattributes  .gitignore  README.md  env_gym.py  env_gym_clean.py  test_new_speaker_env.py
src/evaluate/: evaluate_train.py
src/guestrl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_env/: config_tests.ipynb  dry_run_guestrl.py  dry_run_guestrl_2.py  extreme_config_tests.ipynb  scenario_tests.ipynb  solve_env.py  solve_the_env.py
(+36 files in other folders)
