[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guestrl"
version = "0.1.0"
description = "Reinforcement learning environment for multi-agent fairness"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = []
requires-python = ">=3.8"
